--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
@@ -10,7 +13,7 @@ android {
         targetSdkVersion globalConfig.androidTargetSdkVersion
         versionCode globalConfig.version
         versionName globalConfig.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -20,18 +23,36 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation project(":domain")
 
+    // tests
+    testImplementation tests.junit
+    androidTestImplementation tests.testRunner
+    androidTestImplementation tests.testEspresso
+
+    // android X
+    implementation everyOne.appCompatX
+
+    // rx java
     implementation everyOne.rxJava
+    implementation everyOne.rxAndroid
+
+    // room
+    implementation dataDependencies.roomRuntime
+    implementation dataDependencies.roomRxJava2
+    kapt dataDependencies.roomCompiler
+
+    // retrofit
+    implementation dataDependencies.retrofit
 
 }
