- Android Studio 3.4 - Fixing ButterKnife library version.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -54,5 +54,8 @@ dependencies {
 
     // retrofit
     implementation dataDependencies.retrofit
+    implementation dataDependencies.gson
+    implementation dataDependencies.okHttp
+    implementation dataDependencies.okHttpInterceptor
 
 }
