--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation project(":domain")
     implementation project(":data")
 
+    implementation presentationDependencies.muldidex
+
     // tests
     testImplementation tests.junit
     androidTestImplementation tests.testRunner
